--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -15,18 +15,21 @@
                     Login</a></li>
         </ul>
         {% endif %}
-        <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
+    </nav>
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
-</nav>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
 <div class="container">
     <form method="POST">
         <div class="form-group">
