--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -16,18 +16,22 @@
             <li><a href="{{ url_for('auth.login') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
         {% endif %}
-        <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
+    </nav>
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <!--<div class="alert alert-{{ category }}" role="alert">-->
+        <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
-</nav>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
 <div class="container">
     <form action="{{ url_for('auth.register') }}" method="post">
         <h5>Instructions!</h5>
