--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -15,20 +15,28 @@
                     Login</a></li>
         </ul>
         {% endif %}
-        <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-        </div>
 </nav>
 <div class="container">
-    <h1>CardiffMet Student Management System</h1>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <!--<div class="alert alert-{{ category }}" role="alert">-->
+    <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+</div>
+<div class="container">
+    <h1>APK University Student Management System</h1>
+    <p>Alfredo San Martín Parga</p>
+    <p>st20187596</p>
+    <p>writ1 assingment</p>
+    <p>CIS6006</p>
 </div>
 </div>
 </div>
